more link fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://skeetersdevjourney.github.io",
+  "homepage": "https://skeetersdevjourney.github.io/obligavid_yt-clone",
   "name": "obligavid_yt-clone",
   "version": "0.1.0",
   "private": true,
